force-app/main/default/objects/Opportunity/fields/Actual_Ammount_after_discount__c.field-meta.xml
<CustomField>
    <fullName>Actual_Ammount_after_discount__c</fullName>
    <label>Actual Ammount after discount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>