force-app/main/default/objects/Opportunity/fields/Contribution_Level__c.field-meta.xml
<CustomField>
    <fullName>Contribution_Level__c</fullName>
    <formula>IF( Contribution_Percentage__c  &lt;= 0.1, &quot;Low&quot;,  IF(Contribution_Percentage__c  &gt;= 0.1 &amp;&amp; Contribution_Percentage__c  &lt;= 0.4 , &quot;Medium&quot;, &quot;High&quot;) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contribution Level</label>
    <type>Text</type>
</CustomField>