force-app/main/default/objects/Opportunity/fields/Discount_Ammount__c.field-meta.xml
<CustomField>
    <fullName>Discount_Ammount__c</fullName>
    <label>Discount Ammount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>