force-app/main/default/objects/Opportunity/validationRules/Close_Date_Alert.validationRule-meta.xml
<ValidationRule>
    <fullName>Close_Date_Alert</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT( IsClosed ) , CloseDate &lt;  TODAY())</errorConditionFormula>
    <errorDisplayField>CloseDate</errorDisplayField>
    <errorMessage>he close date must be today or late</errorMessage>
</ValidationRule>